integration_tests/codegen_fail/fail/subscription/fields_duplicate.stderr
error: GraphQL object must have a different name for each field

  = note: https://spec.graphql.org/June2018/#sec-Objects

  --> fail/subscription/fields_duplicate.rs:10:6
   |
10 | impl ObjA {
   |      ^^^^
